css/styles.css
*, *::after, *::before {
  box-sizing: border-box;
}

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

body {
  display: flex;
  flex-direction: column;
  margin: 1em 0.5em;
}

.wrapper {
  max-width: 1200px;
  margin: auto;
}

header {
  height: 20vh;
  display: flex;
  flex-direction: row;
  flex-basis: 30%;
  align-items: center;
  line-height: 2em;
  border: 2px solid black;
  border-top-right-radius: 5px;
  border-top-left-radius: 5px;
}

figure#logo {
  flex-grow: 1;
}

figure#logo img {
  margin: 1em;
  height: 15vh;
}

.title h1 {
  font-family: 'Oswald', sans-serif;
  font-weight: 700;
  font-size: 1.8em;
  text-transform: uppercase;
  flex-grow: 2;
  margin: 1em;
}

section#description {
  background-color: #1a1a1a;
  color: white;
  padding: 1em 1em 0.75em 1em;
  box-shadow: 3px 3px 5px 0px rgba(26,26,26,0.75);
  border-bottom-right-radius: 5px;
  border-bottom-left-radius: 5px;
}

p {
  font-family: 'Roboto', sans-serif;
  font-weight: 300;
  line-height: 1.2em;
  margin: 0.25em 0.25em 0.5em 0.25em;
}

p strong {
  font-weight: 500;
  color: #bfbfbf;
}

section#subscription-buttons {
  height: 25vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
  margin: 1em 0;
}

.subscribe {
  color: white;
  line-height: 4em;
  font-size: 1.0em;
  width: 95%;
  text-align: center;
  text-transform: uppercase;
}

a.subscribe {
  text-decoration: none;
}

button.subscribe {
  background: #cc0000;
  border-radius: 5px;
  box-shadow: 3px 3px 5px 0px rgba(26,26,26,0.75);
  display: flex;
  justify-content: center;
  align-items: center;
}

button.subscribe img {
  margin-left: 0.5em;
}

section#social-media-icons {
  display: flex;
  justify-content: space-around;
  margin-bottom: 1em;
}

i {
  color: #c00;
  font-size: 1.2em;
  line-height: 2em;
  padding: 1em;
  background-color: #bfbfbf;
  border-radius: 100%;
}

section#recent-episodes {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}

article.episode {
  background-color: white;
  border: 1px solid #1a1a1a;
  border-radius: 5px;
  box-shadow: 3px 3px 5px 0px rgba(26,26,26,0.75);
  margin-bottom: 1em;
}

article.episode header {
  border: none;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  border-bottom: 1px solid #1a1a1a;
  height: auto;
}

article.episode h2 {
  font-family: 'Oswald', sans-serif;
  font-size: 1em;
  margin: 0.5em;
}

article.episode time {
  font-family: "Roboto", sans-serif;
  font-weight: 500;
  color: #bfbfbf;
}

article.episode button {
  border: none;
  background: none;
}

article.episode .episode-description {
  padding: 1em 1em 0.75em 1em;
}

.episode-thumbnail {
  display: none;
}

.episode-description strong {
  color: black;
}

.audio-player {
  margin-top: 1em;
  display: flex;
  justify-content: center;
}

section#biographies {
  color: white;
  display: flex;
  flex-direction: column;
}

article.bio {
  display: flex;
  flex-direction: row;
  align-items: center;
  border-bottom: 1px solid white;
  border-radius: 5px;
  box-shadow: 3px 3px 5px 0px rgba(26,26,26,0.75);
  background-color: #c00;
  margin: 1em;
}

article.bio figure {
  margin: 0 1em;
  flex: 1;
  text-align: center;
}

article.bio figure img {
  width: 90%;
  margin-top: 1em;
}

article.bio .bio-content {
  margin: 1em;
  flex: 2;
}

figure.bio-image figcaption {
  font-family: 'Oswald', sans-serif;
  text-transform: uppercase;
  margin-top: 0.25em;
  text-shadow: 3px 3px rgba(26,26,26,0.75);
  margin-bottom: 1em;
}

article#gill {
  flex-direction: row-reverse;
}

footer {
  border: 1px solid #1a1a1a;
  border-radius: 5px;
  box-shadow: 3px 3px 5px 0px rgba(26,26,26,0.75);
  background-color: #bfbfbf;
  margin: 1em;
}

footer p {
  font-family: 'Oswald', sans-serif;
  text-align: right;
  padding: 1em;
}

@media screen and (min-width: 740px) {

  header {
    box-shadow: 3px 3px 5px 0px rgba(26,26,26,0.75);
    border-bottom-right-radius: 5px;
    border-bottom-left-radius: 5px;
    margin-bottom: 1em;
    order: -10;
  }

  section#description {
    background-color: #1a1a1a;
    color: white;
    padding: 1em 1em 0.75em 1em;
    box-shadow: 3px 3px 5px 0px rgba(26,26,26,0.75);
    border-top-right-radius: 5px;
    border-top-left-radius: 5px;
    width: 50%;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
  }

  .primary-content {
    display: flex;
    flex-direction: row-reverse;
    margin-bottom: 1em;
  }

  .buttons {
    display: flex;
    flex-direction: column;
    width: 50%;
    justify-content: space-around;
  }

  .episode-thumbnail {
    display: block;
  }

  .episode-body {
    display:flex;
    flex-direction: row;
  }

  .episode-content {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
  }

  .audio-player {
    margin-left: 1em;
  }

  .episode-thumbnail img {
    margin: 1em;
    border-radius: 5px;
    box-shadow: 3px 3px 5px 0px rgba(26,26,26,0.75);
  }

  .title h1 {
    font-size: 2.5em;
  }
}

@media screen and (min-width: 1085px) {

  .title h1 {
    font-size: 4em;
  }

  section#description {
    font-size: 1.5em;
  }
}

@media screen and (min-width: 1200px) {

  section#recent-episodes {
    flex-direction: row;
    justify-content: space-around;
  }

  .episode {
    max-width: 30%;
  }

  .episode-body {
    flex-direction: column;
    justify-content: space-around;
    flex:1;
  }

  section#biographies {
    flex-direction: row;
  }

  .bio {
    flex: 1;
  }
}

